--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,8 @@ jobs:
 
     - name: Build EXE
       run: |
-        pyinstaller --onefile --add-data "zipcode.txt;." property_search.py
+        pyinstaller --onefile --console --add-data "zipcode.txt;." property_search.py
+
 
     - name: Upload EXE artifact
       uses: actions/upload-artifact@v4
